adding the simulation  of the retailer and the supplier to be sure that the money is being well splitted
